--- a/content/panorama/styles/custom_game/hero_select_overlay.css
+++ b/content/panorama/styles/custom_game/hero_select_overlay.css
@@ -1,190 +1,53 @@
-
-.HeroSelectOverlayRoot
-{
-	width: 100%;
-	height: 210px;
-    margin-top: 20px;
-   
-}
-
-.HeroSelectTeamRowsContainer
-{
-	width: 80%;
-	height: 210px;
-	flow-children: down;
-	horizontal-align: center;
-}
-
-#HeroSelectTeamsContainer,
-#HeroSelectTeamsContainer2
-{
+.HeroSelectOverlayRoot {
     width: 100%;
+    height: 100%;
+    background-color: #0d0000;
     flow-children: right;
-    margin-bottom: 5px;
 }
 
-.HeroSelectOverlayTimer
-{
-	vertical-align: center;
-	horizontal-align: center;
-	margin-bottom: 75px;
+#HeroesRadiant {
+    width: 40%;
+    height: 100%;
+    margin-top: 40px;
+    background-color: #400000;
 }
 
-.AspectRatio4x3 .HeroSelectOverlayTimer
-{
-	margin-left: 50px;
+#Spacer {
+    width: 20%;
 }
 
-#PhaseInstructions > Label
-{
-	visibility: collapse;
-    font-size: 25px;
-    color: #CCCCCC;
-	vertical-align: center;
-	text-align: center;
-	width: 300px;
-	margin-left: 85px;
-	margin-top: 115px;
-	text-transform: uppercase;	
+#HeroesDire {
+    width: 40%;
+    height: 100%;
+    margin-top: 40px;
+    background-color: #192340;
 }
 
-
-.AspectRatio4x3 #PhaseInstructions > Label
-{
-	margin-left: -65px;
-}
-
-#PhaseInstructions > Label.Visible
-{
-	visibility:visible;
-}
-
-#Timer
-{
-    font-size: 48px;
-    color: #CCCCCC;
-	horizontal-align: center;
-	vertical-align: center;
-	width: 100%;
-	text-align: center;
-	margin-top: 5px;
-}
-
-#TimerBg
-{
-	wash-color: #222222;
-	vertical-align: center;
-	horizontal-align: center;
-}
-
-#TimerBg,
-#TimerRing
-{
-	width: 70px;
-	height: 70px;
-
-}
-
-#TimerLabel
-{
-	visibility: collapse;
-    color: #a9aaaa;
-    font-size: 16px;
-	text-transform: uppercase;
-	
-}
-
-.HeroSelectTeamRoot
-{
-    margin-left: 9px;
-    margin-right: 9px;
-}
-
-.HeroSelectTeamRoot.no_players
-{
-	visibility: collapse;
-}
-
-#PlayersContainer
-{
-    horizontal-align: center;
-    flow-children: right;
-    height: 70px;
-}
-
-.local_player_team #PlayerPortraitsOverlay
-{
-	width: 100%;
-    height: 50px;
-    box-shadow: fill #ffffff80 -3px -3px 3px 6px;
-}
-
-#EndSpacer
-{
-    width: fill-parent-flow(1);
-}
-
-#Spacer
-{
-}
-
-.HeroSelectPlayerRoot
-{
-    flow-children: down;
-}
-
-#TeamHeader
-{
+.HeroPreview {
     width: 100%;
-	height: 52px;
+    height: 200px;
+    /*flow-children: right;*/
 }
 
-#TeamHeaderAndPlayers
-{
-	horizontal-align: center;
+/* needed aspect : 2x1 */
+
+.HeroPreview > #HeroImage {
+    width: 100%;
+    height: 100%;
+    transition: transform 100ms linear 0.0ms, saturation 100ms linear 0.0ms;
+    saturation: 0.6;
 }
 
-#TeamHeaderLogoName
-{
-	width: 100%;
-	flow-children: down;
+.HeroPreview > #HeroImage:Hover {
+
+    saturation: 1;
+    transform: scale3d(1.1, 1.1, 1.1);
 }
 
-#TeamGradient
-{
-	width: 100%;
-	height: 24px;
-	vertical-align: bottom;
-	margin-bottom: -5px;
-}
-
-#TeamLogo
-{
-	vertical-align: top;
-	margin-top: 2px;
-	horizontal-align: center;
-}
-
-#PlayerPortrait
-{
-    background-color: #444444;
-    border: 1px solid black;
-    width: 90px;
-    height: 50px;
-}
-
-#PlayerName
-{
+.HeroPreview > #HeroName {
+    z-index: 100;
+    position: 5% 75% 0px;
+    font-size: 40px;
     color: white;
-    font-size: 15px;
-    text-align: center;
-    horizontal-align: center;
-    vertical-align: center;
-	width: 100%;
-	text-overflow: clip;
-}
 
-.HeroSelectPlayerRoot.hero_highlighted #PlayerPortrait
-{
-    saturation: 0.0;
 }
