--- a/content/panorama/styles/custom_game/hero_select_overlay.css
+++ b/content/panorama/styles/custom_game/hero_select_overlay.css
@@ -3,11 +3,17 @@
     height: 100%;
     flow-children: down;
     horizontal-align: center;
+    background-color: green;
+    opacity: 0;
+    margin-top: 60px;
 }
 
 .HeroesList{
-    transition: width 500ms linear 0.0ms;
-    visibility: collapse;
+    /*transition: width 500ms linear 0.0ms;*/
+    height: 100%;
+    width: 100%;
+    /*visibility: collapse;*/
+    background-color: red;
 }
 #Players{
     flow-children: right;
@@ -78,7 +84,7 @@
 #SelectedHero{
     width: 100%;
     height: 100%;
-    /*visibility: collapse;*/
+    visibility: collapse;
     flow-children: down;
     horizontal-align: center;
 }
